Update EV case with uniform assets + shorter copy

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -42,6 +42,7 @@ label: case-study
             In 2024, I set out with my Evinova team to tackle this crisis.
          </p>
 
+
          <h3>Change how pharma works to reduce complexity</h3>
          <p>
             Trial designs suffer from unverified assumptions, closed-door decisions insulating sponsors from patient experience, inefficient governance processes, and copy-pasting from old protocols.
@@ -50,14 +51,14 @@ label: case-study
             Case in point: a paediatric clinical trial asking 8-year-olds about their use of alcohol and contraception — thoughtlessly copied from adult protocols.
          </p>
          <p>
-            The core issue is how big pharma work. Clinical development (ClinDev) and clinical operations (ClinOps) teams rely on limited data for decision-making and rarely collaborate during the earliest stages of study creation — critical for controlling study complexity and feasibility when the cost of protocol changes is still low.
+            The core issue is how big pharma work. Clinical Development (ClinDev) teams responsible for the science of clinical trials and Clinical Operations (ClinOps) responsible for trial delivery both rely on limited data for decision-making and rarely collaborate during the early stages of study creation when the cost of optimising protocol complexity and feasibility is still low.
          </p>
       </div>
 
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-insights3.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-insights4.png" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -73,13 +74,10 @@ label: case-study
 
 
       <div class="container-two-thirds shift"> 
-         <p>
-            So what?
-         </p>
+         <h3>Why does this matter? And how do we respond?</h3>
          <p>
             Burdensome trials mean fewer patients can benefit from new treatment options. And those with no choice are forced through a heavy experience. Over-complex trials are hard to run, expensive, and risky due to delays and high drop-out rates. This means longer waits and higher cost of new medicines for all of us — and ultimately fewer lives saved.
          </p>
-         <h3>A new solution to create better trials</h3>
           <p>
             We need simpler and more effective clinical trials that deliver better outcomes for patients, sites, sponsors and society. We can get there by helping sponsors optimise trial design early on.
          </p>
@@ -89,7 +87,9 @@ label: case-study
          <p>
             So it became a classic 0-to-1 challenge: launch within a year with a value proposition fostering ClinDev-ClinOps collaboration and early-stage holistic optimisation to reduce protocol complexity, while detaching from a global corporation and driving AI adoption.
          </p>
-         <h3>Leading with design through messy reality</h3>
+
+
+         <h3>Leading with design through clinical complexity</h3>
          <p>
             As part of the cross-functional product leadership team, I shaped our strategy, directed design and delivery, and measured the success of our new solution.
          </p>
@@ -101,14 +101,14 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-market6.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-market7.png" class="shadow">
             <h5 class="secondary-annotation">Storyboard drawings by Florencia Novello</h5>
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Using the storyboards and screens as stimulus, I ran a 2-week market research exercise, interviewing 9 ClinOps leaders from top-20 pharma companies.
+               Using the storyboards and screens as stimulus, I ran a 2-week market research exercise, interviewing 9 leaders from top-20 pharma companies.
             </h4>
          </div>
       </div>
@@ -126,14 +126,12 @@ label: case-study
          </ul>
       </div>
       <div class="container-one-third shift-back caption-margin">
-         <div class="caption-margin">
-            <h4 class="caption">
-               <i>— Complexity is a high priority for me, because complexity tends to drive cost as well as other [outcomes]</i>
-            </h4>
-            <h4 class="caption">
-               Executive Director, Clinical Operations, AstraZeneca
-            </h4>
-         </div>
+         <h4 class="caption">
+            <i>— Complexity is a high priority for me, because complexity tends to drive cost as well as other [outcomes]</i>
+         </h4>
+         <h4 class="caption">
+            Executive Director, Clinical Operations, AstraZeneca
+         </h4>
       </div>
 
 
@@ -146,16 +144,13 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-soa2.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-soa3.png" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I also led strategic design of the patient experience metric. It quantifies patient burden and duration per clinical activity. 
-            </h4>
-            <h4 class="caption">
-               It is displayed to ClinDevs as they draft SoAs for in-the-moment decisions.
+               SoA tables are the backbone of every clinical trial. They define study visits (columns) and procedures (rows), and specify the frequency of each activity. 
             </h4>
          </div>
       </div>
@@ -163,17 +158,20 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
+            I led strategic design of the patient experience metric, a critical component of our strategy to win ClinDev adoption. The metric is displayed in the SoA and quantifies duration and patient burden of each clinical procedure for in-the-moment decisions. 
+         </p>
+         <p>
             During delivery, I directed the team through 8 rounds of iterative design and continuous testing with 40+ ClinOps and ClinDev users. 
          </p>
          <p>  
-            To accelerate our concept-to-insight cycles, I brought in rapid prototyping (React + Netlify) and vibe-coding (v0 and Figma Make) into my team's UX tookit. This gave us access to faster and more robust user-derived insights. 
+            To accelerate our concept-to-insight cycles, I brought in rapid prototyping (React + Netlify) and vibe-coding (v0 and Figma Make) into my team's UX toolkit. This gave us access to faster and more robust user-derived insights. 
          </p>
       </div>
 
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-post.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-post1.png" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -194,7 +192,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-teaser4.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-teaser5.png" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -207,18 +205,18 @@ label: case-study
 
 
       <div class="container-two-thirds shift">
-         <h3>Study Design and Planning</h3>
+         <h3>A new tool to design better clinical trials</h3>
          <p>
-            Study Design and Planning (SDP) to facilitate ClinDev-ClinOps collaboration in early stages of study design when optimisation costs least. Our value proposition addresses combined ClinDev and ClinOps needs with key digital protocol tools aiming to win upstream adoption by ClinDev.
+            We launched Study Design and Planning (SDP) to facilitate ClinDev-ClinOps collaboration in the early stages of study design when optimisation costs least. Our value proposition targets combined clinical trial design needs with digital protocol tools aiming to win upstream adoption by ClinDev.
          </p>
          <p>
-            Patient experience metrics and endpoint-assessment linking help ClinDevs design patient-centric studies with only as few on-site activities as necessary, while pre-vetted templates remove the need to copy-paste. For ClinOps, real-time cost and complexity metrics help optimise study design before changes lock in.
+            Patient experience metrics and endpoint-assessment linking help ClinDevs design patient-centric studies with only as few on-site activities as necessary, while pre-vetted templates remove the need to copy-paste. For ClinOps, real-time cost and complexity metrics help optimise study design before changes get locked in.
          </p>
          <p>
             Future SDP versions will deploy AI agents for protocol reviews to maximise iteration between governance points and reduce 'white space', driving down cost, risk of amendments, and complexity.
          </p>
          <p>
-            Through comprehensive in-the-moment metrics and cross-functional collaboration, SDP gives pharma sponsors powerful tools to measure and reduce clinical trial complexity.
+            Through holistic in-the-moment metrics and cross-functional collaboration, SDP gives pharma sponsors powerful tools to measure and reduce clinical trial complexity.
          </p>
 
 
@@ -227,10 +225,10 @@ label: case-study
             We launched SDP as a pilot in spring 2025 to a top-10 pharma early adopter and immediately collected excellent reviews.
          </p>
          <p>
-            AstraZeneca's summer pilot achieved CSAT of 80 and UMUX-Lite of 63.5, setting new standards in trial tech (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling: 23).
+            AstraZeneca's summer pilot achieved CSAT of 80% (average for B2B SaaS is 78%) setting high standard in trial tech (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23%). Same AZ pilot scored 63.5% for UMUX-Lite.
          </p>
          <p>
-           SDP created new revenue streams as pharma seeks optimisation amid 2025's challenging regulatory, trade, and tech landscapes.
+            SDP created a new revenue stream for Evinova as pharma companies seek optimisation amid 2025's challenging regulatory, trade, and tech landscapes.
          </p>
          <p>
             By autumn 2025, SDP gained multi-pharma traction, started delivering on its promise of complexity reduction, and was becoming the AI-first trial design leader.
