Copy refinements to EV case

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -22,8 +22,8 @@ label: case-study
             <h4 class="caption"><b>Project type:</b> B2B SaaS</h4>
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.evinova.company }}, an AstraZeneca health-tech business</h4>
             <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4> -->
-            <h4 class="caption"><b>My contributions:</b> Product strategy, Design leadership, Team leadership, Market research, Rapid prototyping</h4>
-            <h4 class="caption"><b>Outcome:</b> Successful pilots with top-10 pharma, Evinova gains new revenue stream, Enhanced study design tools, CSAT score at 80</h4>
+            <h4 class="caption"><b>My contributions:</b> Product strategy, Design leadership, Team leadership, Market research, Strategic design, Rapid prototyping</h4>
+            <h4 class="caption"><b>Outcome:</b> Successful pilots with two top-10 pharma companies, Evinova gains new revenue stream, New tools for trial optimisation and complexity reduction, CSAT score at 80%</h4>
          </div>
       </div>
    </div>
@@ -39,19 +39,19 @@ label: case-study
             This plea from Barcelona's Sant Joan de Déu pediatric trial site team in summer 2024 crystallised a global crisis: clinical trials are drowning in complexity. <a href="https://f.hubspotusercontent10.net/hubfs/9468915/TuftsCSDD_June2021/pdf/Rising+Protocol+Design+Complexity+is+Driving+Rapid+Growth+in+Clinical+Trial+Data+Volume++++++++++.pdf">Tufts research</a> revealed a staggering increase in the number of procedures per trial and patient, which puts unreasonable burden on patients and sites, stifling drug R&D.
          </p>
          <p>
-            In 2024, I set out with my Evinova team to tackle this crisis.
+            In 2024, I set out with my team at Evinova to tackle this crisis.
          </p>
 
 
          <h3>Change how pharma works to reduce complexity</h3>
          <p>
-            Trial designs suffer from unverified assumptions, closed-door decisions insulating sponsors from patient experience, inefficient governance processes, and copy-pasting from old protocols.
+            Trial designs suffer from unchecked assumptions, closed-room decisions insulating sponsors from patient experience, inefficient governance processes, and copy-pasting from old protocols.
          </p>
          <p>
             Case in point: a paediatric clinical trial asking 8-year-olds about their use of alcohol and contraception — thoughtlessly copied from adult protocols.
          </p>
          <p>
-            The core issue is how big pharma work. Clinical Development (ClinDev) teams responsible for the science of clinical trials and Clinical Operations (ClinOps) responsible for trial delivery both rely on limited data for decision-making and rarely collaborate during the early stages of study creation when the cost of optimising protocol complexity and feasibility is still low.
+            The core issue is how big pharma work. Clinical Development (ClinDev) teams responsible for the science of clinical trials and Clinical Operations (ClinOps) responsible for trial delivery both rely on limited data for decision-making, and rarely collaborate during the early stages of trial creation when the cost of reducing protocol complexity and feasibility optimisation is still low.
          </p>
       </div>
 
@@ -67,7 +67,7 @@ label: case-study
                The way sponsors set up teams to design studies exacerbates the problem.
             </h4>
             <h4 class="caption">
-               Structured ClinDev-ClinOps handoffs kill collaboration which is critical for holistic optimisation in the early stages of study design, when most can be achieved.
+               Structured ClinDev-ClinOps handoffs kill collaboration which is critical for holistic optimisation in the early stages of trial design, when most can be achieved.
             </h4>
          </div>
       </div>
@@ -79,22 +79,22 @@ label: case-study
             Burdensome trials mean fewer patients can benefit from new treatment options. And those with no choice are forced through a heavy experience. Over-complex trials are hard to run, expensive, and risky due to delays and high drop-out rates. This means longer waits and higher cost of new medicines for all of us — and ultimately fewer lives saved.
          </p>
           <p>
-            We need simpler and more effective clinical trials that deliver better outcomes for patients, sites, sponsors and society. We can get there by helping sponsors optimise trial design early on.
+            We need simpler, more effective clinical trials that deliver better outcomes for patients, sites, sponsors and society. We can get there by helping sponsors optimise trial designs early on.
          </p>
          <p>
-            AstraZeneca launched Evinova to address this. Earlier, I helped AZ build <a href="/case-studies/merlin">Merlin</a> — a precursor to solving this problem — but it was not market-ready due to tech debt and AZ-specific customisation.
+            AstraZeneca founded Evinova to address this. Earlier, I helped AZ build <a href="/case-studies/merlin">Merlin</a> — a precursor to solving this problem — but it was not market-ready due to tech debt and AZ-specific customisation.
          </p>
          <p>
-            So it became a classic 0-to-1 challenge: launch within a year with a value proposition fostering ClinDev-ClinOps collaboration and early-stage holistic optimisation to reduce protocol complexity, while detaching from a global corporation and driving AI adoption.
+            So it became a classic 0-to-1 challenge: launch a new product within 12 months with a value proposition to foster ClinDev-ClinOps collaboration and enable early-stage optimisation and protocol complexity reduction, all the while our new company was separating from a global corporation and driving AI adoption.
          </p>
 
 
          <h3>Leading with design through clinical complexity</h3>
          <p>
-            As part of the cross-functional product leadership team, I shaped our strategy, directed design and delivery, and measured the success of our new solution.
+            As part of the cross-functional product leadership team, I shaped strategy, directed design and delivery, and measured our success.
          </p>
          <p>
-            My approach to designing the new solution was evidence-based, design-led, and iteration-driven, leveraging emerging AI tools. I began by formulating product vision using situational storyboards and speculative product screens for internal alignment and external communication. 
+            My approach to designing the new solution was evidence-based, design-led, and iteration-driven, leveraging emerging AI tools. I began by formulating the product vision using situational storyboards and speculative product screens for internal alignment and external communication. 
          </p>
       </div>
    
@@ -108,7 +108,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Using the storyboards and screens as stimulus, I ran a 2-week market research exercise, interviewing 9 leaders from top-20 pharma companies.
+               Using the storyboards and screens as stimulus, I ran a 2-week market research exercise, interviewing ClinOps leaders from nine top-20 pharma companies.
             </h4>
          </div>
       </div>
@@ -121,12 +121,12 @@ label: case-study
          <ul>
             <li>Sponsor teams want to reduce protocol complexity but they need a reliable way to measure it.</li>
             <li>ClinDev teams copy-paste parts of old protocols to reduce regulatory risk, not to save time drafting.</li>
-            <li>The success of ClinDev-ClinOps collaboration tools depend on upstream adoption; to buy in, ClinDevs must get immediate personal value (e.g. patient burden metrics, company-vetted templates, endpoint-assessment linking).</li>
-            <li>Sponsors can gain efficiency by reducing 'white space' — the no-work and no-decision time between protocol drafting and reviews, and governance interactions (e.g. a month-long wait for protocol review by the next Design Review Committee).</li>
+            <li>The success of ClinDev-ClinOps collaboration tools depends on upstream adoption; to buy in, ClinDevs must get immediate personal value (e.g. patient burden metrics, company-vetted templates, endpoint-assessment linking).</li>
+            <li>Sponsors can gain efficiency by reducing 'white space' — the no-work and no-decision time between protocol drafting and reviews, and governance interactions (e.g. a month-long wait for a protocol review by the next Design Review Committee).</li>
          </ul>
       </div>
       <div class="container-one-third shift-back caption-margin">
-         <h4 class="caption">
+         <h4 class="caption text-only">
             <i>— Complexity is a high priority for me, because complexity tends to drive cost as well as other [outcomes]</i>
          </h4>
          <h4 class="caption">
@@ -137,7 +137,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            These insights shaped our strategy. I led design and development of key elements of a digital study protocol: Schedule of Activities (SoA), Eligibility Criteria, Study Schema, Objectives and Endpoints. Together, these enable structured study design aligned to <a href="https://www.cdisc.org/ddf">industry standards</a>, real-time metrics, and cross-team collaboration.
+            These insights shaped our strategy. I led design and development of key elements of a digital trial protocol: Schedule of Activities (SoA), Eligibility Criteria, Study Schema, Objectives and Endpoints. Together, these enable structured trial design aligned to <a href="https://www.cdisc.org/ddf">industry standards</a>, real-time metrics, and cross-team collaboration.
          </p>
       </div>
 
@@ -150,7 +150,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               SoA tables are the backbone of every clinical trial. They define study visits (columns) and procedures (rows), and specify the frequency of each activity. 
+               SoA tables are the backbone of every clinical trial. They define trial visits (columns) and procedures (rows), and specify the frequency of each activity. 
             </h4>
          </div>
       </div>
@@ -164,7 +164,7 @@ label: case-study
             During delivery, I directed the team through 8 rounds of iterative design and continuous testing with 40+ ClinOps and ClinDev users. 
          </p>
          <p>  
-            To accelerate our concept-to-insight cycles, I brought in rapid prototyping (React + Netlify) and vibe-coding (v0 and Figma Make) into my team's UX toolkit. This gave us access to faster and more robust user-derived insights. 
+            To accelerate our concept-to-insight cycles, I brought rapid prototyping (React + Netlify) and generative AI vibe-coding (v0 and Figma Make) to my team's UX toolkit. This gave us access to faster and more robust user-derived insights. 
          </p>
       </div>
 
@@ -185,7 +185,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            Simultaneously, I worked with commercial teams to build product stories that generate early adopter excitement with compelling demos, proven <a href="/case-studies/merlin">Merlin</a> achievements, strategic roadmaps, and work-in-progress concepts.
+            Simultaneously, I worked with commercial teams to build product stories that generate early adopter excitement with compelling demos, proven outcomes achieved in <a href="/case-studies/merlin">Merlin</a>, strategic roadmaps, and work-in-progress concepts.
          </p>
       </div>
          
@@ -198,7 +198,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Objectives & Endpoints view: one of the work-in-progress concepts for ClinDev-ClinOps review of endpoint ROI.
+               Objectives and Endpoints view: one of the work-in-progress concepts to support a ROI review of trial endpoints.
             </h4>
          </div>
       </div>
@@ -207,32 +207,45 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>A new tool to design better clinical trials</h3>
          <p>
-            We launched Study Design and Planning (SDP) to facilitate ClinDev-ClinOps collaboration in the early stages of study design when optimisation costs least. Our value proposition targets combined clinical trial design needs with digital protocol tools aiming to win upstream adoption by ClinDev.
+            We launched Study Design and Planning (SDP) to facilitate ClinDev-ClinOps collaboration in the early stages of trial design when optimisation costs least. Our value proposition targets combined clinical trial design needs with digital protocol tools aiming to win upstream adoption by ClinDev.
          </p>
          <p>
-            Patient experience metrics and endpoint-assessment linking help ClinDevs design patient-centric studies with only as few on-site activities as necessary, while pre-vetted templates remove the need to copy-paste. For ClinOps, real-time cost and complexity metrics help optimise study design before changes get locked in.
+            Patient experience metrics and endpoint-assessment linking help ClinDevs design patient-centric studies with only as few on-site activities as necessary, while pre-vetted templates remove the need to copy-paste. For ClinOps, real-time cost and complexity metrics help optimise trial design before changes get locked in.
          </p>
          <p>
-            Future SDP versions will deploy AI agents for protocol reviews to maximise iteration between governance points and reduce 'white space', driving down cost, risk of amendments, and complexity.
+            Future SDP versions will deploy AI agents for protocol reviews to maximise iteration between governance points and reduce 'white space' — this will reduce cost, risk of amendments, and complexity.
          </p>
          <p>
             Through holistic in-the-moment metrics and cross-functional collaboration, SDP gives pharma sponsors powerful tools to measure and reduce clinical trial complexity.
          </p>
+         <p> 
 
+         </p>
+      </div>
 
+      <div class="container-two-thirds shift image-gallery">
          <h3>A win for everyone</h3>
          <p>
             We launched SDP as a pilot in spring 2025 to a top-10 pharma early adopter and immediately collected excellent reviews.
          </p>
          <p>
-            AstraZeneca's summer pilot achieved CSAT of 80% (average for B2B SaaS is 78%) setting high standard in trial tech (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23%). Same AZ pilot scored 63.5% for UMUX-Lite.
+            AstraZeneca's summer pilot achieved CSAT 80% (average for B2B SaaS is 78%) setting a high standard in trial tech (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23%). The AZ pilot also scored 63.5 for UMUX-Lite.
          </p>
          <p>
-            SDP created a new revenue stream for Evinova as pharma companies seek optimisation amid 2025's challenging regulatory, trade, and tech landscapes.
+            SDP also created a new revenue stream for Evinova as pharma companies seek optimisation amid 2025's challenging regulatory, trade, and tech landscapes.
          </p>
          <p>
             By autumn 2025, SDP gained multi-pharma traction, started delivering on its promise of complexity reduction, and was becoming the AI-first trial design leader.
          </p>
+      </div>
+      
+      <div class="container-one-third shift-back caption-margin">
+         <h4 class="caption text-only">
+            <i>— This is what we have been asking for [...] if we can have those discussions right from the beginning, it will help us to have a solid SoA...</i>
+         </h4>
+         <h4 class="caption">
+            SDP pilot user, Late Oncology, AstraZeneca
+         </h4>
       </div>
    </div>
 </section>
