--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -23,7 +23,7 @@ label: case-study
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.evinova.company }}, an AstraZeneca health-tech business</h4>
             <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Product strategy, Design leadership, Team leadership, Market research, Strategic design, Rapid prototyping</h4>
-            <h4 class="caption"><b>Outcome:</b> Successful pilots with two top-10 pharma companies, Evinova gains new revenue stream, New tools for trial optimisation and complexity reduction, CSAT score at 80%</h4>
+            <h4 class="caption"><b>Outcome:</b> Successful pilots with two top-10 pharma companies, Evinova gains new revenue stream, New tools for trial optimisation and complexity reduction, CSAT score 80%</h4>
          </div>
       </div>
    </div>
