Add minor text updates

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -11,7 +11,7 @@ label: case-study
             <h3><a href="/case-studies/evinova/">{{ site.data.pages.case-study.evinova.heading }}</a></h3>
             <h4>at {{ site.data.pages.case-study.evinova.company }} &nbsp; &bull; &nbsp; {{ site.data.pages.case-study.evinova.year }}</h4>
             <p>
-               I spearheaded the vision, design, and alpha-launch of Evinova's new SaaS B2B product that aims to solve the complexity crisis in clinical development.
+               I jointly spearheaded the vision, design, and alpha-launch of Evinova's new SaaS B2B solution to solve the complexity crisis in clinical development.
             </p>
             <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-site9.png" class=""></a>
          </div>
@@ -21,7 +21,7 @@ label: case-study
             <h3><a href="/case-studies/merlin/">{{ site.data.pages.case-study.merlin.heading }}</a></h3>
             <h4>at {{ site.data.pages.case-study.merlin.company }} &nbsp; &bull; &nbsp; {{ site.data.pages.case-study.merlin.year }}</h4>
             <p>
-               I turned around an underperforming UX team to lead a successful redesign of a clinical study optimisation product at AstraZeneca by integrating six stand-alone tools into one.
+               I turned around an underperforming UX team to deliver a successful redesign of a clinical study optimisation product at AstraZeneca by integrating six stand-alone tools into one.
             </p>
             <a href="/case-studies/merlin/" class="image-link"><img src="/img/cases/merlin/merlin2.png" class="shadow"></a>
          </div>
@@ -86,7 +86,7 @@ label: case-study
             <h3><a href="/case-studies/immunocore/">{{ site.data.pages.case-study.immunocore.heading }}</a></h3>
             <h4>for {{ site.data.pages.case-study.immunocore.company }} &nbsp; &bull; &nbsp; {{ site.data.pages.case-study.immunocore.year }}</h4>
             <p>
-               I developed brand and science communication assets that Immunocore (NASDAQ: <a href="https://www.nasdaq.com/market-activity/stocks/imcr">IMCR</a>) has been now using for over a decade.
+               I developed the brand and science communication assets that Immunocore (NASDAQ: <a href="https://www.nasdaq.com/market-activity/stocks/imcr">IMCR</a>) has been using for over a decade.
             </p>
             <a href="/case-studies/immunocore/" class="image-link"><img src="/img/cases/immunocore/immunocore-front.png" class="shadow"></a>
          </div>
