Optimise image assets in cases
Reduce size, change format, optimise compression

--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -48,7 +48,7 @@ label: case-study
          <div class="block-margin">
             <img src="/img/cases/concept2/concept2-instructions.png" class="image-gallery shadow">
             <img src="/img/cases/concept2/concept2-prototype.png" class="image-gallery shadow">
-            <img src="/img/cases/concept2/concept2-pov.png" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-pov.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -82,7 +82,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-script.png" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-script.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -105,7 +105,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-video.png" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-video.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
