--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -46,9 +46,9 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-sketch-1.png" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-sketch-2.png" class="image-gallery shadow">
             <!-- <img src="/img/cases/immunocore/immunocore-sketch-3.png" class="image-gallery shadow"> -->
+            <img src="/img/cases/immunocore/immunocore-sketch-1.jpg" class="image-gallery shadow">
+            <img src="/img/cases/immunocore/immunocore-sketch-2.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
