--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -16,7 +16,7 @@ label: case-study
                <video autoplay muted loop controls playsinline class="shadow">
                   <source src="/img/cases/vivli/vivli-for-website.webm" type="video/webm">
                   Your browser does not support the video tag.
-                  <img src="/img/cases/vivli-front.png" title="Your browser does not support the video tag" alt="Vivli prototype walkthrough">
+                  <img src="/img/cases/vivli/vivli-front.jpg" title="Your browser does not support the video tag" alt="Vivli prototype walkthrough">
                <video>
             </div>
          </div>
@@ -55,7 +55,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <div class="block-margin">
             <img src="/img/cases/vivli/vivli-models.png" class="image-gallery shadow">
-            <img src="/img/cases/vivli/vivli-sketches.png" class="image-gallery shadow">
+            <img src="/img/cases/vivli/vivli-sketches.jpg" class="image-gallery shadow">
             <img src="/img/cases/vivli/vivli-workflow.png" class="image-gallery shadow">
          </div>
       </div>
